--- a/Nails-world/Inicio.html
+++ b/Nails-world/Inicio.html
@@ -27,7 +27,7 @@
         <h1>
             <picture><img src="imgs/logo-azul.svg" alt="logo-principal" title="logo-principal" class="Header-img"></picture>
         </h1>
-        <nav>
+        <nav class="Header-nav">
             <ul class="Header-ul">
                 <li class="Header-li"><a href="Formas.html">formas</a></li>
                 <li class="Header-li"><a href="Tecnicas.html">técnicas</a></li>
