--- a/Nails-world/Formas.html
+++ b/Nails-world/Formas.html
@@ -108,6 +108,25 @@
         </div>
     </article>
 
+    <footer class="Footer">
+        <ul class="Footer-wrapper">
+            <li class="Footer-li">
+                <a href="https://www.facebook.com/Pixar/?locale=es_ES" title="facebook pixar" target="_blank" rel="noreferrer">
+                <img src="" class="icono__rrss" alt="icono facebook" title="facebook" loading="lazy">
+                </a>
+            </li>
+            <li class="Footer-li">
+                <a href="https://twitter.com/Pixar/status/1777416115859378435" title="twitter pixar" target="_blank" rel="noreferrer">
+                <img src="assets/twitter-154-svgrepo-com.svg" class="icono__rrss" alt="icono twitter" title="twitter" loading="lazy">
+                </a>
+            </li>
+            <li class="Footer-li">
+                <a href="https://www.instagram.com/pixar/" title="instagram pixar" target="_blank" rel="noreferrer">
+                <img src="assets/instagram-svgrepo-com.svg" class="icono__rrss" alt="icono instagram" title="instagram" loading="lazy">
+                </a>
+            </li>
+        </ul>
+
 </body>
 
 </html>
