--- a/Nails-world/Formas.html
+++ b/Nails-world/Formas.html
@@ -112,7 +112,7 @@
         <ul class="Footer-wrapper">
             <li class="Footer-li">
                 <a href="https://www.facebook.com/Pixar/?locale=es_ES" title="facebook pixar" target="_blank" rel="noreferrer">
-                <img src="" class="icono__rrss" alt="icono facebook" title="facebook" loading="lazy">
+                <img src="imgs/" class="icono__rrss" alt="icono facebook" title="facebook" loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
