--- a/Nails-world/Formas.html
+++ b/Nails-world/Formas.html
@@ -24,13 +24,15 @@
 </head>
 
 <body>
-    <!-- Menú -->
+    <!-- Encabezado -->
     <header class="Header-wrapper--formas">
         <picture><img src="imgs/fondo-titulo-azul.jpg" alt="img-cabecera" title="img-cabecera"
                 class="Header-img--formas"></picture>
         <h1 class="Header-h1--formas">formas</h1>
     </header>
     <nav>
+
+        <!-- Menú -->
         <ul class="Header-ul--formas">
             <li class="Header-li--formas"><a href="Inicio.html">inicio</a></li>
             <li class="Header-li--formas"><a href="Tecnicas.html">técnicas</a></li>
@@ -39,7 +41,7 @@
         </ul>
     </nav>
 
-    <!-- Encabezado -->
+    <!-- Introducción-->
     <section class="Section-formas">
         <h2 class="Section-h2--formas">¿Qué importancia tiene la forma de las uñas?</h2>
         <p class="Section-p--formas">Las uñas deben tener una forma determinada dependiendo del tipo de mano que tengas,
@@ -111,21 +113,27 @@
     <footer class="Footer">
         <ul class="Footer-wrapper">
             <li class="Footer-li">
-                <a href="https://www.facebook.com/Pixar/?locale=es_ES" title="facebook pixar" target="_blank" rel="noreferrer">
-                <img src="imgs/" class="icono__rrss" alt="icono facebook" title="facebook" loading="lazy">
+                <a href="https://www.facebook.com/?locale=es_ES" title="facebook pixar" target="_blank"
+                    rel="noreferrer">
+                    <img src="imgs/facebook-svgrepo-com.svg" class="icono__rrss" alt="icono facebook" title="facebook"
+                        loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
-                <a href="https://twitter.com/Pixar/status/1777416115859378435" title="twitter pixar" target="_blank" rel="noreferrer">
-                <img src="assets/twitter-154-svgrepo-com.svg" class="icono__rrss" alt="icono twitter" title="twitter" loading="lazy">
+                <a href="https://x.com/?lang=es" title="twitter pixar" target="_blank" rel="noreferrer">
+                    <img src="imgs/twitter-154-svgrepo-com.svg" class="icono__rrss" alt="icono twitter" title="twitter"
+                        loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
-                <a href="https://www.instagram.com/pixar/" title="instagram pixar" target="_blank" rel="noreferrer">
-                <img src="assets/instagram-svgrepo-com.svg" class="icono__rrss" alt="icono instagram" title="instagram" loading="lazy">
+                <a href="https://www.instagram.com/" title="instagram pixar" target="_blank" rel="noreferrer">
+                    <img src="imgs/instagram-svgrepo-com.svg" class="icono__rrss" alt="icono instagram"
+                        title="instagram" loading="lazy">
                 </a>
             </li>
         </ul>
+        </nav>
+        <div class="Footer-copyright">&#169; 2024 Nails World</div>
 
 </body>
 
