--- a/Nails-world/Inicio.html
+++ b/Nails-world/Inicio.html
@@ -35,9 +35,31 @@
                 <li class="Header-li"><a href="Contacto.html">contacto</a></li>
             </ul>
         </nav>
-
     </header>
 
+
+
+
+    <footer class="Footer">
+        <ul class="Footer-wrapper">
+            <li class="Footer-li">
+                <a href="https://www.facebook.com/Pixar/?locale=es_ES" title="facebook pixar" target="_blank" rel="noreferrer">
+                <img src="imgs/facebook-svgrepo-com.svg" class="icono__rrss" alt="icono facebook" title="facebook" loading="lazy">
+                </a>
+            </li>
+            <li class="Footer-li">
+                <a href="https://twitter.com/Pixar/status/1777416115859378435" title="twitter pixar" target="_blank" rel="noreferrer">
+                <img src="imgs/twitter-154-svgrepo-com.svg" class="icono__rrss" alt="icono twitter" title="twitter" loading="lazy">
+                </a>
+            </li>
+            <li class="Footer-li">
+                <a href="https://www.instagram.com/pixar/" title="instagram pixar" target="_blank" rel="noreferrer">
+                <img src="imgs/instagram-svgrepo-com.svg" class="icono__rrss" alt="icono instagram" title="instagram" loading="lazy">
+                </a>
+            </li>
+        </ul>
+        <div class="Footer-copyright">&#169; 2024 Nails World</div>
+    </footer>
 </body>
 
 </html>
