--- a/Nails-world/Tecnicas.html
+++ b/Nails-world/Tecnicas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,14 +16,47 @@
     <!-- Font Montserrat -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ms+Madi&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ms+Madi&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
     <script src="./js/index.js"></script>
 </head>
+
 <body>
+
+    <!-- Encabezado -->
     <header class="Header-wrapper--tecnicas">
-        <picture><img src="imgs/fondo-titulo-azul.jpg" alt="img-cabecera" title="img-cabecera" class="Header-img--tecnicas"></picture>
+        <picture><img src="imgs/fondo-titulo-azul.jpg" alt="img-cabecera" title="img-cabecera"
+                class="Header-img--tecnicas"></picture>
         <h1 class="Header-h1--tecnicas">técnicas</h1>
     </header>
+    <nav>
+
+        <!-- Menú -->
+        <ul class="Header-ul--tecnicas">
+            <li class="Header-li--tecnicas"><a href="Inicio.html">inicio</a></li>
+            <li class="Header-li--tecnicas"><a href="Formas.html">formas</a></li>
+            <li class="Header-li--tecnicas"><a href="Efectos.html">efectos</a></li>
+            <li class="Header-li--tecnicas"><a href="Contacto.html">contacto</a></li>
+        </ul>
+    </nav>
+
+    <!-- Introducción -->
+    <section class="Section-tecnicas">
+        <h2 class="Section-h2--tecnicas">En esta sección podrás informarte sobre las diferentes técnicas de manicura que
+            se utilizan en la actualidad, siempre a manos de profesionales.</h2>
+        <p class="Section-p--tecnicas">La evolución de la manicura a lo largo de los últimos años ha sido algo
+            increíble, en pocos años han ido apareciendo diferentes técnicas para realizar la manicura, haciendo que no
+            tengas que preocuparte en periodos de hasta 3 semanas de volver a pintar tus uñas con esmaltes tradicionales
+            que a lo más mínimo se estropean. Gracias a todas estas nuevas técnicas solo tienes que invertir un poquito
+            de tu tiempo para llevar una manicura perfecta durante mucho más tiempo. Estas técnicas también han hecho
+            que puedas obtener la longitud y forma que más te guste en tus uñas. Siempre tendrás que hacer pequeños
+            descansos para cuidar tu uña natural y darles un respiro ya que la mayoría de productos utilizados en estas
+            técnicas son nocivos para tus uñas.</p>
+    </section>
+
+    <!-- Contenido -->
 </body>
+
 </html>
