--- a/Nails-world/Tecnicas.html
+++ b/Nails-world/Tecnicas.html
@@ -57,6 +57,12 @@
     </section>
 
     <!-- Contenido -->
+
+    <div class="Imgs-wrapper">
+        <img src="imgs/img-grid1.jpg" alt="tecnicas img1" class="Imgs-grid" title="tecnicas img1" loading="lazy">
+        <img src="imgs/img-grid2.jpg" alt="tecnicas img2" class="Imgs-grid" title="tecnicas img2" loading="lazy">
+        <img src="imgs/img-grid3.jpg" alt="tecnicas img3" class="Imgs-grid" title="tecnicas img3" loading="lazy">
+    </div>
 </body>
 
 </html>
