--- a/Nails-world/Formas.html
+++ b/Nails-world/Formas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -33,6 +33,10 @@
     <nav>
 
         <!-- Menú -->
+        <div class="Logo-sticky">
+            <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
+            <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
+        </div>
         <ul class="Header-ul--formas">
             <li class="Header-li--formas"><a href="Inicio.html">inicio</a></li>
             <li class="Header-li--formas"><a href="Tecnicas.html">técnicas</a></li>
@@ -40,6 +44,7 @@
             <li class="Header-li--formas"><a href="Contacto.html">contacto</a></li>
         </ul>
     </nav>
+
 
     <!-- Introducción-->
     <section class="Section-formas">
@@ -132,9 +137,8 @@
                 </a>
             </li>
         </ul>
-        </nav>
         <div class="Footer-copyright">&#169; 2024 Nails World</div>
-
+        </footer>
 </body>
 
 </html>
