añadido sticky del logo

--- a/Nails-world/Inicio.html
+++ b/Nails-world/Inicio.html
@@ -39,27 +39,30 @@
 
 
 
-
     <footer class="Footer">
         <ul class="Footer-wrapper">
             <li class="Footer-li">
-                <a href="https://www.facebook.com/Pixar/?locale=es_ES" title="facebook pixar" target="_blank" rel="noreferrer">
-                <img src="imgs/facebook-svgrepo-com.svg" class="icono__rrss" alt="icono facebook" title="facebook" loading="lazy">
+                <a href="https://www.facebook.com/?locale=es_ES" title="facebook pixar" target="_blank"
+                    rel="noreferrer">
+                    <img src="imgs/facebook-svgrepo-com.svg" class="icono__rrss" alt="icono facebook" title="facebook"
+                        loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
-                <a href="https://twitter.com/Pixar/status/1777416115859378435" title="twitter pixar" target="_blank" rel="noreferrer">
-                <img src="imgs/twitter-154-svgrepo-com.svg" class="icono__rrss" alt="icono twitter" title="twitter" loading="lazy">
+                <a href="https://x.com/?lang=es" title="twitter pixar" target="_blank" rel="noreferrer">
+                    <img src="imgs/twitter-154-svgrepo-com.svg" class="icono__rrss" alt="icono twitter" title="twitter"
+                        loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
-                <a href="https://www.instagram.com/pixar/" title="instagram pixar" target="_blank" rel="noreferrer">
-                <img src="imgs/instagram-svgrepo-com.svg" class="icono__rrss" alt="icono instagram" title="instagram" loading="lazy">
+                <a href="https://www.instagram.com/" title="instagram pixar" target="_blank" rel="noreferrer">
+                    <img src="imgs/instagram-svgrepo-com.svg" class="icono__rrss" alt="icono instagram"
+                        title="instagram" loading="lazy">
                 </a>
             </li>
         </ul>
         <div class="Footer-copyright">&#169; 2024 Nails World</div>
-    </footer>
+        </footer>
 </body>
 
 </html>
