--- a/Nails-world/Tecnicas.html
+++ b/Nails-world/Tecnicas.html
@@ -34,6 +34,9 @@
     <nav>
 
         <!-- Menú -->
+        <div class="Logo-sticky">
+            <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
+        </div>
         <ul class="Header-ul--tecnicas">
             <li class="Header-li--tecnicas"><a href="Inicio.html">inicio</a></li>
             <li class="Header-li--tecnicas"><a href="Formas.html">formas</a></li>
@@ -63,6 +66,32 @@
         <img src="imgs/img-grid2.jpg" alt="tecnicas img2" class="Imgs-grid" title="tecnicas img2" loading="lazy">
         <img src="imgs/img-grid3.jpg" alt="tecnicas img3" class="Imgs-grid" title="tecnicas img3" loading="lazy">
     </div>
+
+    <!-- Footer -->
+    <footer class="Footer">
+        <ul class="Footer-wrapper">
+            <li class="Footer-li">
+                <a href="https://www.facebook.com/?locale=es_ES" title="facebook pixar" target="_blank"
+                    rel="noreferrer">
+                    <img src="imgs/facebook-svgrepo-com.svg" class="icono__rrss" alt="icono facebook" title="facebook"
+                        loading="lazy">
+                </a>
+            </li>
+            <li class="Footer-li">
+                <a href="https://x.com/?lang=es" title="twitter pixar" target="_blank" rel="noreferrer">
+                    <img src="imgs/twitter-154-svgrepo-com.svg" class="icono__rrss" alt="icono twitter" title="twitter"
+                        loading="lazy">
+                </a>
+            </li>
+            <li class="Footer-li">
+                <a href="https://www.instagram.com/" title="instagram pixar" target="_blank" rel="noreferrer">
+                    <img src="imgs/instagram-svgrepo-com.svg" class="icono__rrss" alt="icono instagram"
+                        title="instagram" loading="lazy">
+                </a>
+            </li>
+        </ul>
+        <div class="Footer-copyright">&#169; 2024 Nails World</div>
+        </footer>
 </body>
 
 </html>
