--- a/Nails-world/Formas.html
+++ b/Nails-world/Formas.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nails World - Formas</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/index.js"></script>
+    
     <!-- Font Bebas Neue (Títulos secundarios) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,8 +22,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ms+Madi&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js"></script>
 </head>
 
 <body>
@@ -38,6 +39,7 @@
         </div>
         <ul class="Header-ul--formas">
             <li class="Header-li--formas"><a href="Inicio.html">inicio</a></li>
+            <li class="Header-li--formas"><a href="Formas.html">formas</a></li>
             <li class="Header-li--formas"><a href="Tecnicas.html">técnicas</a></li>
             <li class="Header-li--formas"><a href="Efectos.html">efectos</a></li>
             <li class="Header-li--formas"><a href="Contacto.html">contacto</a></li>
