--- a/Nails-world/Inicio.html
+++ b/Nails-world/Inicio.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/index.js"></script>
+
     <title>Nails Wold</title>
     <!-- Font Bebas Neue -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,16 +19,17 @@
     <!-- Font Montserrat -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ms+Madi&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js"></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ms+Madi&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <!-- Encabezado -->
     <header class="Header-wrapper">
         <h1>
-            <picture><img src="imgs/logo-azul.svg" alt="logo-principal" title="logo-principal" class="Header-img"></picture>
+            <picture><img src="imgs/logo-azul.svg" alt="logo-principal" title="logo-principal" class="Header-img">
+            </picture>
         </h1>
         <nav class="Header-nav">
             <ul class="Header-ul">
@@ -62,7 +66,7 @@
             </li>
         </ul>
         <div class="Footer-copyright">&#169; 2024 Nails World</div>
-        </footer>
+    </footer>
 </body>
 
 </html>
