--- a/Nails-world/Tecnicas.html
+++ b/Nails-world/Tecnicas.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nails World - Técnicas</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/index.js"></script>
+
     <!-- Font Bebas Neue -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,8 +22,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ms+Madi&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js"></script>
 </head>
 
 <body>
@@ -31,15 +32,16 @@
                 class="Header-img--tecnicas"></picture>
         <h1 class="Header-h1--tecnicas">técnicas</h1>
     </header>
-    <nav>
 
-        <!-- Menú -->
+    <!-- Menú -->
+    <nav>
         <div class="Logo-sticky">
             <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
         </div>
         <ul class="Header-ul--tecnicas">
             <li class="Header-li--tecnicas"><a href="Inicio.html">inicio</a></li>
             <li class="Header-li--tecnicas"><a href="Formas.html">formas</a></li>
+            <li class="Header-li--tecnicas"><a href="Tecnicas.html">técnicas</a></li>
             <li class="Header-li--tecnicas"><a href="Efectos.html">efectos</a></li>
             <li class="Header-li--tecnicas"><a href="Contacto.html">contacto</a></li>
         </ul>
@@ -62,10 +64,58 @@
     <!-- Contenido -->
 
     <div class="Imgs-wrapper">
-        <img src="imgs/img-grid1.jpg" alt="tecnicas img1" class="Imgs-grid" title="tecnicas img1" loading="lazy">
-        <img src="imgs/img-grid2.jpg" alt="tecnicas img2" class="Imgs-grid" title="tecnicas img2" loading="lazy">
-        <img src="imgs/img-grid3.jpg" alt="tecnicas img3" class="Imgs-grid" title="tecnicas img3" loading="lazy">
+        <img src="imgs/img-grid1.jpg" alt="tecnicas-img1" class="Imgs-grid" title="tecnicas-img1" loading="lazy">
+        <img src="imgs/img-grid2.jpg" alt="tecnicas-img2" class="Imgs-grid" title="tecnicas-img2" loading="lazy">
+        <img src="imgs/img-grid3.jpg" alt="tecnicas-img3" class="Imgs-grid" title="tecnicas-img3" loading="lazy">
     </div>
+
+    <article class="Article-tecnicas">
+        <div class="Article-wrapper--tecnicas">
+            <h3 class="Article-h3--tecnicas">uñas acrílicas</h3>
+            <p class="Article-p--tecnicas">Las uñas acrílicas se realizan con un polvo acrílico, sobre tu uña natural.
+                El polvo acrílico denominado polímero se seca cuando entra en contacto con un líquido llamado monómero.
+                Por ese motivo, este tipo de técnica no requiere lampara de secado.
+                Son muy resistentes y evitan el resquebrajamiento de las uñas, por lo que es una técnica muy aconsejada
+                para uñas más blandas y con tendencia a resquebrajarse. Con esta técnica podrás obtener el largo y forma
+                de la uña que desees.
+                Se pueden alargar con tips o con moldes y la duración de esta manicura es de 2 a 4 semanas.</p>
+        </div>
+        <div class="Article-wrapper--tecnicas">
+            <h3 class="Article-h3--tecnicas">uñas de gel</h3>
+            <p class="Article-p--tecnicas">Las uñas de gel se realizan con Gel UV, un producto que te permitirá o bien
+                alargar tu uña (mediante tips o moldes) o simplemente reforzar tu uña natural. Está técnica sí necesita
+                una lámpara UV para el secado de la manicura, se pueden aplicar varias capas de Gel UV en función al
+                grosor que desees. Con esta técnica también podrás conseguir el largo y la forma de la uña que desees.
+                Para la realización de esta técnica primero se tendrá que aplicar una fina capa de Primer Ultra Bond, un
+                líquido que desinfecta y prepara tu uña para el siguiente paso, que es aplicar el Builder Clear Gel, que
+                es el gel constructor.
+                La duración de esta técnica de manicura es de 2 a 4 semanas.</p>
+        </div>
+        <div class="Article-wrapper--tecnicas">
+            <h3 class="Article-h3--tecnicas">uñas de fibra de vidrio</h3>
+            <p class="Article-p--tecnicas">Esta nueva técnica de manicura se ha puesto de moda estos últimos años debido
+                a que su resistencia es mayor a cualquiera de las demás técnicas. Esta técnica es muy utilizada para la
+                preparación de uñas débiles que se encuentran muy desgastadas.
+                Se realiza con hilos de fibra de vidrio, primero tendrás que aplicar el pegamento sobre tu uña natural,
+                seguidamente se adhieren los hilos de fibra de vidrio y despúes con unas tijeras de cigüeña se recortan
+                los hilos hasta el largo deseado, finalmente se liman para darle la forma que más te guste. El último
+                paso sería aplicar una resina que fije las fibras de vidrio y el secado con la lámpara UV.
+                Estos pasos se tendrán que repetir de dos a tres veces hasta conseguir el grosor deseado.
+                La duración de esta técnica puede llegar a ser de uno a seis meses, siempre retocándolas cuando tu uña
+                empiece a crecer.
+            </p>
+        </div>
+        <div class="Article-wrapper--tecnicas">
+            <h3 class="Article-h3--tecnicas">esmaltado semi-permanente</h3>
+            <p class="Article-p--tecnicas">Esta es la técnica es la menos nociva para tu uña, ya que es el tipo de
+                esmaltado más parecido al normal, pero te puede durar de 15 a 20 días sin necesidad de preocuparte por
+                que se te descascarillen o se rayen. Esta técnica no permite el alargado de tus uñas ya que simplemente
+                lo que se aplica son esmaltes que con ayuda de la lámpara UV hace que sea un esmaltado permanente.
+                Primero se aplicará una capa de base (Base Coat), seguidamente el color deseado y para terminar se
+                aplica el Top Coat que fijará y hará permanente el esmalte. Entre cada uno de estos pasos, tendrás que
+                introducir las uñas en la lámpara UV.</p>
+        </div>
+    </article>
 
     <!-- Footer -->
     <footer class="Footer">
@@ -74,7 +124,7 @@
                 <a href="https://www.facebook.com/?locale=es_ES" title="facebook pixar" target="_blank"
                     rel="noreferrer">
                     <img src="imgs/facebook-svgrepo-com.svg" class="icono__rrss" alt="icono facebook" title="facebook"
-                        loading="lazy">
+                        oading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
@@ -91,7 +141,7 @@
             </li>
         </ul>
         <div class="Footer-copyright">&#169; 2024 Nails World</div>
-        </footer>
+    </footer>
 </body>
 
 </html>
