--- a/Nails-world/Contacto.html
+++ b/Nails-world/Contacto.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nails World - Contacto</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/index.js"></script>
     <!-- Font Bebas Neue -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,8 +18,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ms+Madi&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js"></script>
 </head>
 <body>
     
