--- a/Nails-world/Efectos.html
+++ b/Nails-world/Efectos.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nails World - Técnicas</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/index.js"></script>
     <!-- Font Bebas Neue -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,14 +18,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ms+Madi&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js"></script>
 </head>
 <body>
+
+    <!-- Encabezado -->
     <header class="Header-wrapper--efectos">
         <picture><img src="imgs/fondo-titulo-azul.jpg" alt="img-cabecera" title="img-cabecera" class="Header-img--efectos"></picture>
         <h1 class="Header-h1--efectos">efectos</h1>
     </header>
+
+    <!-- Menú -->
+    <nav>
+        <div class="Logo-sticky">
+            <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
+        </div>
+        <ul class="Header-ul--efectos">
+            <li class="Header-li--efectos"><a href="Inicio.html">inicio</a></li>
+            <li class="Header-li--efectos"><a href="Formas.html">formas</a></li>
+            <li class="Header-li--efectos"><a href="Tecnicas.html">técnicas</a></li>
+            <li class="Header-li--efectos"><a href="Efectos.html">efectos</a></li>
+            <li class="Header-li--efectos"><a href="Contacto.html">contacto</a></li>
+        </ul>
+    </nav>
 
 </body>
 </html>
