--- a/Nails-world/Formas.html
+++ b/Nails-world/Formas.html
@@ -31,12 +31,14 @@
                 class="Header-img--formas"></picture>
         <h1 class="Header-h1--formas">formas</h1>
     </header>
-    <nav>
+    
 
         <!-- Menú -->
-        <div class="Logo-sticky">
-            <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
+        <div class="Logo">
+            <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Logo-sticky">
+            <img  src="" alt="" class="Logo-responsive">
         </div>
+    <nav>
         <ul class="Header-ul--formas">
             <li class="Header-li--formas"><a href="Inicio.html">inicio</a></li>
             <li class="Header-li--formas"><a href="Formas.html">formas</a></li>
