--- a/Nails-world/Inicio.html
+++ b/Nails-world/Inicio.html
@@ -8,15 +8,15 @@
     <script src="./js/index.js"></script>
 
     <title>Nails Wold</title>
-    <!-- Font Bebas Neue -->
+    <!-- Font Bebas Neue (Se aplica en el menú y algunos subtítulos) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <!-- Font Ms Madi -->
+    <!-- Font Ms Madi (Se aplica para los títulos) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ms+Madi&display=swap" rel="stylesheet">
-    <!-- Font Montserrat -->
+    <!-- Font Montserrat (Se aplica para los textos del contenido en general) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -25,12 +25,13 @@
 </head>
 
 <body>
-    <!-- Encabezado -->
+    <!-- Encabezado de la página, es el logo que está indicado como h1-->
     <header class="Header-wrapper">
         <h1>
-            <picture><img src="imgs/logo-azul.svg" alt="logo-principal" title="logo-principal" class="Header-img">
-            </picture>
+            ><img src="imgs/logo-azul.svg" alt="logo-principal" title="logo-principal" class="Header-img">
         </h1>
+
+    <!-- Menú donde aparecen todas las secciones, en el responsive desaparecerá para convertirse en un desplegable -->
         <nav class="Header-nav">
             <ul class="Header-ul">
                 <li class="Header-li"><a href="Formas.html">formas</a></li>
@@ -42,7 +43,7 @@
     </header>
 
 
-
+    <!-- Footer del documento, donde se incluyen las redes sociales y el copyright -->
     <footer class="Footer">
         <ul class="Footer-wrapper">
             <li class="Footer-li">
