--- a/Nails-world/Formas.html
+++ b/Nails-world/Formas.html
@@ -32,10 +32,6 @@
         <h1 class="Header-h1--formas">formas</h1>
     </header>
     
-    <!-- Logo sticky común para todas las secciones, menos la sección de inicio -->
-    <div class="Logo-sticky">
-        <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
-    </div>
     
     <!-- Menú donde aparecen todas las secciones, en el responsive desaparecerá para convertirse en un desplegable -->
     <nav>
@@ -43,7 +39,7 @@
             <li class="Header-li--formas"><a href="Inicio.html">inicio</a></li>
             <li class="Header-li--formas"><a href="Formas.html">formas</a></li>
             <li class="Header-li--formas"><a href="Tecnicas.html">técnicas</a></li>
-            <li class="Header-li--formas"><a href="Efectos.html">efectos</a></li>
+            <li class="Header-li--formas"><a href="Galeria.html">galería</a></li>
             <li class="Header-li--formas"><a href="Contacto.html">contacto</a></li>
         </ul>
     </nav>
@@ -118,25 +114,30 @@
         </div>
     </article>
 
+        <!-- Logo sticky común para todas las secciones, menos la sección de inicio -->
+        <div class="Logo-sticky">
+            <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
+        </div>
+
     <!-- Footer del documento, donde se incluyen las redes sociales y el copyright -->
     <footer class="Footer">
         <ul class="Footer-wrapper">
             <li class="Footer-li">
-                <a href="https://www.facebook.com/?locale=es_ES" title="facebook pixar" target="_blank"
+                <a href="https://www.facebook.com/?locale=es_ES" title="facebook" target="_blank"
                     rel="noreferrer">
-                    <img src="imgs/facebook-svgrepo-com.svg" class="icono__rrss" alt="icono facebook" title="facebook"
+                    <img src="imgs/facebook-svgrepo-com.svg" alt="icono facebook" title="facebook"
                         loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
-                <a href="https://x.com/?lang=es" title="twitter pixar" target="_blank" rel="noreferrer">
-                    <img src="imgs/twitter-154-svgrepo-com.svg" class="icono__rrss" alt="icono twitter" title="twitter"
+                <a href="https://x.com/?lang=es" title="twitter" target="_blank" rel="noreferrer">
+                    <img src="imgs/twitter-154-svgrepo-com.svg" alt="icono twitter" title="twitter"
                         loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
-                <a href="https://www.instagram.com/" title="instagram pixar" target="_blank" rel="noreferrer">
-                    <img src="imgs/instagram-svgrepo-com.svg" class="icono__rrss" alt="icono instagram"
+                <a href="https://www.instagram.com/" title="instagram" target="_blank" rel="noreferrer">
+                    <img src="imgs/instagram-svgrepo-com.svg" alt="icono instagram"
                         title="instagram" loading="lazy">
                 </a>
             </li>
