--- a/Nails-world/Inicio.html
+++ b/Nails-world/Inicio.html
@@ -28,7 +28,7 @@
     <!-- Encabezado de la página, es el logo que está indicado como h1-->
     <header class="Header-wrapper">
         <h1>
-            ><img src="imgs/logo-azul.svg" alt="logo-principal" title="logo-principal" class="Header-img">
+            <img src="imgs/logo-azul.svg" alt="logo-principal" title="logo-principal" class="Header-img">
         </h1>
 
     <!-- Menú donde aparecen todas las secciones, en el responsive desaparecerá para convertirse en un desplegable -->
@@ -36,32 +36,37 @@
             <ul class="Header-ul">
                 <li class="Header-li"><a href="Formas.html">formas</a></li>
                 <li class="Header-li"><a href="Tecnicas.html">técnicas</a></li>
-                <li class="Header-li"><a href="Efectos.html">efectos</a></li>
+                <li class="Header-li"><a href="Galeria.html">galería</a></li>
                 <li class="Header-li"><a href="Contacto.html">contacto</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- Logo sticky común para todas las secciones, menos la sección de inicio -->
+    <div class="Logo-sticky">
+        <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
+    </div>
 
 
     <!-- Footer del documento, donde se incluyen las redes sociales y el copyright -->
     <footer class="Footer">
         <ul class="Footer-wrapper">
             <li class="Footer-li">
-                <a href="https://www.facebook.com/?locale=es_ES" title="facebook pixar" target="_blank"
+                <a href="https://www.facebook.com/?locale=es_ES" title="facebook" target="_blank"
                     rel="noreferrer">
-                    <img src="imgs/facebook-svgrepo-com.svg" class="icono__rrss" alt="icono facebook" title="facebook"
+                    <img src="imgs/facebook-svgrepo-com.svg" alt="icono facebook" title="facebook"
                         loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
-                <a href="https://x.com/?lang=es" title="twitter pixar" target="_blank" rel="noreferrer">
-                    <img src="imgs/twitter-154-svgrepo-com.svg" class="icono__rrss" alt="icono twitter" title="twitter"
+                <a href="https://x.com/?lang=es" title="twitter" target="_blank" rel="noreferrer">
+                    <img src="imgs/twitter-154-svgrepo-com.svg" alt="icono twitter" title="twitter"
                         loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
-                <a href="https://www.instagram.com/" title="instagram pixar" target="_blank" rel="noreferrer">
-                    <img src="imgs/instagram-svgrepo-com.svg" class="icono__rrss" alt="icono instagram"
+                <a href="https://www.instagram.com/" title="instagram" target="_blank" rel="noreferrer">
+                    <img src="imgs/instagram-svgrepo-com.svg" alt="icono instagram"
                         title="instagram" loading="lazy">
                 </a>
             </li>
