falta el formulario

--- a/Nails-world/Galeria.html
+++ b/Nails-world/Galeria.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nails World - Técnicas</title>
     <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js"></script>
+    <script src="./js/Galeria.js"></script>
     <!-- Font Bebas Neue (Se aplica en el menú y algunos subtítulos) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -149,7 +149,14 @@
 
     <!-- Footer del documento, donde se incluyen las redes sociales y el copyright -->
             <footer class="Footer">
-            <ul class="Footer-wrapper">
+                <nav class="Footer-nav">
+                    <h3 class="Footer-h3"><a href="Inicio.html">inicio</a></h3>
+                    <h3 class="Footer-h3"><a href="Formas.html">formas</a></h3>
+                    <h3 class="Footer-h3"><a href="Tecnicas.html">técnicas</a></h3>
+                    <h3 class="Footer-h3"><a href="Galeria.html">galería</a></h3>
+                    <h3 class="Footer-h3"><a href="Contacto.html">contacto</a></h3>
+                </nav>
+            <ul class="Footer-ul">
                 <li class="Footer-li">
                     <a href="https://www.facebook.com/?locale=es_ES" title="facebook" target="_blank"
                         rel="noreferrer">
