--- a/Nails-world/Tecnicas.html
+++ b/Nails-world/Tecnicas.html
@@ -121,7 +121,14 @@
 
     <!-- Footer del documento, donde se incluyen las redes sociales y el copyright -->
         <footer class="Footer">
-        <ul class="Footer-wrapper">
+            <nav class="Footer-nav">
+                <h3 class="Footer-h3"><a href="Inicio.html">inicio</a></h3>
+                <h3 class="Footer-h3"><a href="Formas.html">formas</a></h3>
+                <h3 class="Footer-h3"><a href="Tecnicas.html">técnicas</a></h3>
+                <h3 class="Footer-h3"><a href="Galeria.html">galería</a></h3>
+                <h3 class="Footer-h3"><a href="Contacto.html">contacto</a></h3>
+            </nav>
+        <ul class="Footer-ul">
             <li class="Footer-li">
                 <a href="https://www.facebook.com/?locale=es_ES" title="facebook" target="_blank"
                     rel="noreferrer">
