--- a/Nails-world/Contacto.html
+++ b/Nails-world/Contacto.html
@@ -43,9 +43,17 @@
             <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
         </div>
 
+
     <!-- Footer del documento, donde se incluyen las redes sociales y el copyright -->
             <footer class="Footer">
-            <ul class="Footer-wrapper">
+                <nav class="Footer-nav">
+                    <h3 class="Footer-h3"><a href="Inicio.html">inicio</a></h3>
+                    <h3 class="Footer-h3"><a href="Formas.html">formas</a></h3>
+                    <h3 class="Footer-h3"><a href="Tecnicas.html">técnicas</a></h3>
+                    <h3 class="Footer-h3"><a href="Galeria.html">galería</a></h3>
+                    <h3 class="Footer-h3"><a href="Contacto.html">contacto</a></h3>
+                </nav>
+            <ul class="Footer-ul">
                 <li class="Footer-li">
                     <a href="https://www.facebook.com/?locale=es_ES" title="facebook" target="_blank"
                         rel="noreferrer">
