--- a/Nails-world/Contacto.html
+++ b/Nails-world/Contacto.html
@@ -38,6 +38,19 @@
             </ul>
         </nav>
 
+        <div class="Marquesina">
+            <div class="Marquesina-caja">
+                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+            </div>
+        </div>
+
         <!-- Logo sticky común para todas las secciones, menos la sección de inicio -->
         <div class="Logo-sticky">
             <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
